--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,16 @@
     <string name="app_name">WatchOut</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_medication">MedicationActivity</string>
+    <string name="title_activity_reminder">ReminderActivity</string>
+    <string name="listView">ListView</string>
+    <string name="back">&lt;</string>
+    <string name="timeSet">time set</string>
+    <string name="dateText">datetime</string>
+    <string name="search_hint">...</string>
+    <string name="search_label">Search</string>
+    <string name="alertName">Alert Name</string>
+    <string name="positiveButton">Accept</string>
+    <string name="negativeButton">Ignore</string>
 
 </resources>
